# tetrs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
resources/icons/: icns.icns
src/: animator.rs  constants.rs  data.rs  game.rs  grid.rs  main.rs  selector.rs  sounds.rs  tetromino.rs
